--- a/components/languageQuestions/LanguageQuestions.module.scss
+++ b/components/languageQuestions/LanguageQuestions.module.scss
@@ -2,11 +2,13 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  background-color: #0b1929; 
-  .language__container {
-    max-width: 800px;
+  background-color: #0b1929;
+  .language__left {
+    width: 320px;
+  }
+  .language__right {
     width: 100%;
-    padding: 32px;
+    height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
     scrollbar-width: none;
@@ -16,9 +18,27 @@
     .language__container__title {
       font-family: "Roboto", sans-serif;
       font-size: 18px;
-      font-weight: 600;
-      color: #0a7ea3;
+      text-transform: uppercase;
+      padding: 0px 24px;
+      font-weight: 500;
+      color: #f5f5f5;
+      display: flex;
+      height: 71px;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      position: -webkit-sticky; /* Safari */
+      top: 0;
+      z-index: 3000;
+      background-color: rgba(10, 25, 41, 0.7);
+      box-shadow: inset 0px -1px 1px #132f4c;
+      backdrop-filter: blur(8px);
     }
+  }
+  .language__container {
+    max-width: 800px;
+    width: 100%;
+    padding: 16px 32px;
     .language__container__loader {
       display: flex;
       justify-content: center;
@@ -52,6 +72,55 @@
           direction: ltr;
           font-feature-settings: "kern";
           font-family: "Inter", sans-serif;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .language {
+    .language__left {
+      display: none;
+    }
+    .language__container {
+      max-width: 800px;
+      width: 100%;
+      padding: 16px 32px;
+      .language__container__loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+      .language__container__questions {
+        display: flex;
+        flex-direction: column;
+        gap: 52px;
+        margin-top: 16px;
+        .language__container__questions {
+          display: flex;
+          flex-direction: column;
+          gap: 12px;
+          .language__container__questions__question {
+            font-size: 22px;
+            font-weight: 600;
+            font-family: "Roboto";
+            font-family: "Roboto";
+            font-size: 18px;
+            font-weight: 600;
+            color: #e7ebf0;
+          }
+          .language__container__questions__answer {
+            font-size: 15px;
+            line-height: 1.5;
+            font-weight: 400;
+            color: #b2bac2;
+            letter-spacing: 0;
+            direction: ltr;
+            font-feature-settings: "kern";
+            font-family: "Inter", sans-serif;
+          }
         }
       }
     }
