--- a/components/advanceFrontend/advanceLayout/AdvanceLayout.module.scss
+++ b/components/advanceFrontend/advanceLayout/AdvanceLayout.module.scss
@@ -7,8 +7,12 @@
     width: 315px;
     height: auto;
     border-radius: 12px;
-    background-color: #023367;
-    border: 1px solid #054da7;
+    background-color: #132f4c;
+    border-radius: 10px;
+    border: 1px solid #1e4976;
+    &:hover {
+      border: 1px solid #66b2ff;
+    }
     padding: 16px;
     cursor: pointer;
     font-family: "Inter", sans-serif;
@@ -55,7 +59,12 @@
       flex-wrap: wrap;
       font-size: 14px;
       gap: 8px;
-      font-family: "Roboto", sans-serif;
+      .adv_layout_item_tag {
+        font-family: "Roboto", sans-serif;
+        padding: 8px 12px;
+        border-radius: 4px;
+        background-color: #1e4976;
+      }
     }
   }
 }
@@ -65,21 +74,19 @@
   flex-direction: column;
   width: 99%;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  transition: all 0.2s ease-in-out;
-  &:hover {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    transform: scale(1.004);
-  }
+  background-color: #132f4c;
+  border-radius: 10px;
+  border: 1px solid #1e4976;
   .adv_layout_item_list_header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: "Roboto", sans-serif;
     font-size: 18px;
+    color: #fff;
     font-weight: 600;
     padding: 16px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #1e4976;
     gap: 8px;
     .adv_layout_item_level {
       flex: 1;
@@ -101,7 +108,7 @@
     font-family: "Inter", sans-serif;
     font-size: 14px;
     font-weight: 400;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #1e4976;
     padding: 8px 16px;
     gap: 8px;
     .adv_layout_item_level {
@@ -110,6 +117,7 @@
     .adv_layout_item_title {
       flex: 2;
       overflow: hidden;
+      color: #fff;
       text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-line-clamp: 1;
@@ -119,6 +127,7 @@
       flex: 4;
       overflow: hidden;
       text-overflow: ellipsis;
+      color: #b2bac2;
       display: -webkit-box;
       -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
@@ -128,11 +137,15 @@
       display: flex;
       flex-wrap: wrap;
       gap: 6px;
+      font-size: 12px;
+      font-family: "Roboto", sans-serif;
+      color: #b2bac2;
+      text-transform: uppercase;
     }
     cursor: pointer;
     transition: all 0.2s ease-in-out;
     &:hover {
-      background-color: #f5f5f5;
+      background-color: #1e4976;
     }
   }
 }
