--- a/components/codingQuestions/CodingQuestions.module.scss
+++ b/components/codingQuestions/CodingQuestions.module.scss
@@ -15,7 +15,7 @@
       padding: 0 16px;
       .machine_left_header_title {
         font-family: "Roboto", sans-serif;
-        font-size: 24px;
+        font-size: 22px;
         cursor: pointer;
         font-weight: 500;
         color: #fff;
@@ -31,7 +31,6 @@
     .iframe_container {
       width: 100%;
       height: calc(100vh - 48px);
-      background: url("../../assets/loader.gif");
       background-size: 50px;
       background-position: center;
       background-repeat: no-repeat;
@@ -51,5 +50,48 @@
 @media screen and (max-width: 800px) {
   .machine_right {
     display: none;
+  }
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.loader-bar {
+  height: 52px;
+  width: 30px;
+  margin-right: 10px;
+  background-color: #d0cdcd;
+  animation: loader-bar 1s ease-in-out infinite;
+}
+
+.loader-bar:nth-of-type(1) {
+  animation-delay: 0s;
+}
+
+.loader-bar:nth-of-type(2) {
+  animation-delay: 0.2s;
+}
+
+.loader-bar:nth-of-type(3) {
+  animation-delay: 0.4s;
+}
+
+.loader-bar:nth-of-type(4) {
+  animation-delay: 0.6s;
+}
+
+@keyframes loader-bar {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1, 2.5);
+  }
+  40% {
+    transform: scale(1);
   }
 }
