--- a/components/showAdvanceFrontEnd/ShowAdvanceFrontEnd.module.scss
+++ b/components/showAdvanceFrontEnd/ShowAdvanceFrontEnd.module.scss
@@ -31,7 +31,6 @@
     .iframe_container {
       width: 100%;
       height: calc(100vh - 48px);
-      background: url("../../assets/loader.gif");
       background-size: 50px;
       background-position: center;
       background-repeat: no-repeat;
@@ -45,5 +44,48 @@
       background: #2e3137;
       z-index: 999999;
     }
+  }
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.loader-bar {
+  height: 52px;
+  width: 30px;
+  margin-right: 10px;
+  background-color: #d0cdcd;
+  animation: loader-bar 1s ease-in-out infinite;
+}
+
+.loader-bar:nth-of-type(1) {
+  animation-delay: 0s;
+}
+
+.loader-bar:nth-of-type(2) {
+  animation-delay: 0.2s;
+}
+
+.loader-bar:nth-of-type(3) {
+  animation-delay: 0.4s;
+}
+
+.loader-bar:nth-of-type(4) {
+  animation-delay: 0.6s;
+}
+
+@keyframes loader-bar {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1, 2.5);
+  }
+  40% {
+    transform: scale(1);
   }
 }
