--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -9,15 +9,12 @@
     width: 100%;
     border-radius: 12px;
     max-height: 550px;
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-behavior: smooth;
     -ms-overflow-style: none; /* IE 11 */
     scrollbar-width: none; /* Firefox 64 */
-    ::-webkit-scrollbar {
-      display: none;
-    }
-    ::-webkit-scrollbar-thumb {
-      display: none;
+    &::-webkit-scrollbar {
+      width: 0px;
     }
   }
 }
